# spdcalc-py

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: CI.yml  release-please.yaml  release-please.yml
.zed/: settings.json
docs/: requirements.txt
docs/source/: api.rst  conf.py  crystals.txt  full-config-reference.md  index.rst  quickstart.md
docs/source/api/: spdcalc.spdcalc.FrequencyArray.rst  spdcalc.spdcalc.FrequencySpace.rst  spdcalc.spdcalc.Integrator.rst  spdcalc.spdcalc.JointSpectrum.rst  spdcalc.spdcalc.SPDC.rst  spdcalc.spdcalc.SumDiffFrequencySpace.rst  spdcalc.spdcalc.WavelengthArray.rst  spdcalc.spdcalc.WavelengthSpace.rst  spdcalc.spdcalc.get_all_crystal_meta.rst  spdcalc.spdcalc.get_crystal_indices.rst  spdcalc.spdcalc.get_crystal_meta.rst  spdcalc.spdcalc.get_jsi.rst  spdcalc.spdcalc.jsi_normalization.rst  spdcalc.spdcalc.jsi_singles_normalization.rst  spdcalc.spdcalc.phasematch_fiber_coupling.rst  spdcalc.spdcalc.phasematch_singles_fiber_coupling.rst  spdcalc.spdcalc.pump_spectral_amplitude.rst
py-examples/: all-crystals.py  requirements.txt  settings.yaml  simple.py
src/: apodization.rs  error.rs  integrator.rs  joint_spectrum.rs  lib.rs  spaces.rs  spdc.rs
test/: simple.py
