[package]
name = "spdcalc-py"
version = "0.1.0-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "spdcalc"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.2", features = ["num-complex"] }
serde_json = "1.0"
serde_yaml = "0.9"
spdcalc = { git = "https://github.com/kshalm/spdcalc", branch = "v2.0", features = ["pyo3"] }
